examples/test/testpolicy14179.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14179
  namespace: namespace111
spec:
  podSelector:
    matchLabels:
      key19: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value45
          key14: value7
          key24: value32
      podSelector:
        matchLabels:
          key41: value45
